# chronocore

./: .gitignore  CMakeLists.txt  README.md
docs/: linux-collector-plan.md
examples/: matching_engine.cpp
include/chronocore/: baseline_store.hpp  correlation_engine.hpp  http_server.hpp  online_statistics.hpp  perf_collector.hpp  shared_marker_source.hpp  shared_ring.hpp  synthetic_source.hpp  types.hpp
scripts/: bare-metal-perf-validation.sh  cloud-markers-validation.sh
src/: baseline_store.cpp  correlation_engine.cpp  http_server.cpp  main.cpp  perf_collector_stub.cpp  shared_marker_source.cpp  shared_ring.cpp  synthetic_source.cpp
src/linux/: perf_collector.cpp
tests/: test_statistics.cpp
